--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web Programming</title>
+    <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
@@ -12,7 +12,7 @@
       </ul>
     </nav>
     <div class="container">
-      {{content}}
+      {{ content }}
       </div>
       <footer>
         <ul>
