--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         <ul>
           <li><a href="https://github.com/weblabtutorial">github.com/weblabtutorial</a></li>
           <li><a href="https://weblabtutorial.github.io">weblabtutorial.github.io </a></li>
+          <li><a href="https://www.hw.ac.uk/">weblabtutorial.github.io </a></li>
         </ul>
         </footer>
   </body>
